# pynt

./: .gitignore  README.md  basic_syntax.md  example.asm  example.bas  example.basic  example.lc3  main.py  output.txt  pyproject.toml
interpreters/basic/: __init__.py  classes.py  repl.py  statements.py
interpreters/lc3/: __init__.py  classes.py  environment.py  trap.py
interpreters/lisp/: __init__.py  classes.py
