[tool.poetry]
name = "interpreters"
version = "0.1.0"
description = ""
authors = ["Surge <esfloyd9341@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
interpret = "main:interpreters"
